--- a/globe_bank/public/stylesheets/public.css
+++ b/globe_bank/public/stylesheets/public.css
@@ -144,12 +144,18 @@ navigation li {
     line-height: normal;
 }
 
-/* #page p {
-    font-family: "Gill Sans", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, Arial, "sans-serif"font-size: 12px;
-    color: #000000;
+#page p {
+
     padding: 0px;
     line-height: normal;
-} */
+    color: #000000;
+    /* font-size: 12px; */
+    font-family: "Gill Sans", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, Arial, "sans-serif";
+    /* font-family: "Gill Sans", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, Arial, "sans-serif"font-size: 12px;
+    color: #000000;
+    padding: 0px;
+    line-height: normal; */
+}
 
 #page h3 {
     font-size: 14px;
