--- a/globe_bank/public/stylesheets/staff.css
+++ b/globe_bank/public/stylesheets/staff.css
@@ -127,3 +127,13 @@ dd {
     margin-bottom: 0;
     padding-left: 1em;
 }
+
+/* Session Mesages */
+#message {
+    color: #0055DD;
+    background: white;
+    border: 2px solid #0055DD;
+    padding: 1em 15px;
+    margin: 1em 30px;
+    width: 890px;
+}
